@startuml

package layeredArch {
    class "PaperController" as oc{}

    class "PaperApplicationService" as os {
        assemblePaper()
    }

    class "Paper" as od {
        paperId: PaperId
        quizzes: List<BlankQuiz>
        assemble()
    }

    interface PaperRepository {
        save()
    }

    class PaperJPARepository {}

    class ConcretePaperRepository {}

    interface PaperJPARepository{}

    oc ..> os :<write>
    os ..> od
    os ..> PaperRepository
    oc .....> sqlExecutor :<read>

    PaperRepository <|... ConcretePaperRepository
    ConcretePaperRepository -right-> PaperJPARepository
}


@enduml